--- a/67746-h/67746-h.htm
+++ b/67746-h/67746-h.htm
@@ -987,8 +987,8 @@ font-size:large;
 /* ]]> */ </style>
 </head>
 <body>
-<div lang='en'>
-<p style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of <span lang='nl'>Dionyzos</span>, by Louis Couperus</p>
+<div lang='en' xml:lang='en'>
+<p style='text-align:center; font-size:1.2em; font-weight:bold'>The Project Gutenberg eBook of <span lang='nl' xml:lang='nl'>Dionyzos</span>, by Louis Couperus</p>
 <div style='display:block; margin:1em 0'>
 This eBook is for the use of anyone anywhere in the United States and
 most other parts of the world at no cost and with almost no restrictions
@@ -1000,12 +1000,12 @@ country where you are located before using this eBook.
 </div>
 </div>
 
-<p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: <span lang='nl'>Dionyzos</span></p>
+<p style='display:block; margin-top:1em; margin-bottom:1em; margin-left:2em; text-indent:-2em'>Title: <span lang='nl' xml:lang='nl'>Dionyzos</span></p>
 <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em'>Author: Louis Couperus</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Release Date: March 31, 2022 [eBook #67746]</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: Dutch</p>
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Jeroen Hellingman and the Online Distributed Proofreading Team at https://www.pgdp.net/ for Project Gutenberg (This file was produced from images generously made available by The Internet Archive/Canadian Libraries)</p>
-<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK <span lang='nl'>DIONYZOS</span> ***</div>
+<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK <span lang='nl' xml:lang='nl'>DIONYZOS</span> ***</div>
 <div class="front">
 <div class="div1 cover"><span class="pageNum">[<a href="#toc">Inhoud</a>]</span><div class="divBody">
 <p class="first"></p>
@@ -7999,8 +7999,8 @@ voor u niet werken.</p>
 </table>
 </div>
 </div>
-<div lang='en'>
-<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK <span lang='nl'>DIONYZOS</span> ***</div>
+<div lang='en' xml:lang='en'>
+<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK <span lang='nl' xml:lang='nl'>DIONYZOS</span> ***</div>
 <div style='text-align:left'>
 
 <div style='display:block; margin:1em 0'>
@@ -8029,8 +8029,8 @@ by U.S. copyright law. Redistribution is subject to the trademark
 license, especially commercial redistribution.
 </div>
 
-<div style='margin:0.83em 0; font-size:1.1em; text-align:center'>START: FULL LICENSE<br>
-<span style='font-size:smaller'>THE FULL PROJECT GUTENBERG LICENSE<br>
+<div style='margin:0.83em 0; font-size:1.1em; text-align:center'>START: FULL LICENSE<br />
+<span style='font-size:smaller'>THE FULL PROJECT GUTENBERG LICENSE<br />
 PLEASE READ THIS BEFORE YOU DISTRIBUTE OR USE THIS WORK</span>
 </div>
 
